feat: написал тесты